--- a/npm-registry-consumer/package.json
+++ b/npm-registry-consumer/package.json
@@ -10,10 +10,10 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
-    "npm-registry-provider": "^1.0.1",
+    "npm-registry-provider": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.2.2",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "^6.0.9",
+    "react-scripts": "^4.0.3"
   }
 }
