--- a/npm-registry-provider/package.json
+++ b/npm-registry-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-registry-provider",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -18,6 +18,7 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/react-router-dom": "^5.3.3",
     "react-dom": "^17.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-typescript2": "^0.31.2",
@@ -40,5 +41,7 @@
     "react-data-table-component": "^7.4.7",
     "styled-components": "^5.3.3"
   },
-  "files": ["/lib"]
+  "files": [
+    "/lib"
+  ]
 }
