--- a/npm-registry-provider/package.json
+++ b/npm-registry-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-registry-provider",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -21,6 +21,7 @@
     "@types/react-router-dom": "^5.3.3",
     "react-dom": "^17.0.2",
     "rollup": "^2.70.1",
+    "rollup-plugin-multi-input": "^1.3.1",
     "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.6.2"
   },
