--- a/npm-registry-consumer/package.json
+++ b/npm-registry-consumer/package.json
@@ -10,15 +10,19 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "axios": "^0.26.1",
     "npm-registry-provider": "^1.0.3",
     "react": "^17.0.2",
+    "react-doc-viewer": "^0.1.5",
+    "react-documents": "^1.1.2",
     "react-dom": "^17.0.2",
+    "react-file-viewer": "^1.2.1",
     "react-router-dom": "^6.2.2",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
