--- a/npm-registry-provider/package.json
+++ b/npm-registry-provider/package.json
@@ -6,7 +6,8 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "build": "rollup -c"
   },
   "keywords": [],
@@ -16,13 +17,17 @@
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
+    "jest": "^27.5.1",
     "react-dom": "^17.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-multi-input": "^1.3.1",
     "rollup-plugin-typescript2": "^0.31.2",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
   "peerDependencies": {
